<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@android:color/background_light">
    
 <LinearLayout 
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical" 
     android:layout_margin="1dp"
     android:background="@android:color/darker_gray">
     
     
     <LinearLayout 
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical" 
     android:layout_margin="20dp">
     
      <TextView
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:text="@string/purchase_txt" />
      <Button
          android:id="@+id/purchase"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:text="@string/purchase" />
      <Button
          android:id="@+id/back"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:text="@string/back" />
       </LinearLayout>
      </LinearLayout>
</LinearLayout>